--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container-fluid con-1">
     <div class="row">
       <div class="col-sm-12 navi-1 ">   
-        <a href="#" class="nav">menu</a>
+        <a href="#" class="nav">menuuuuu</a>
         <a href="#" class="nav">about</a>
         <a href="#" class="nav">contact us</a>
         <a href="#" class="nav">location</a>
